@@ -1,11 +1,12 @@
 package nz.ac.canterbury.seng302.gardenersgrove.controller;
 
-import nz.ac.canterbury.seng302.gardenersgrove.components.GardensSidebar;
+import nz.ac.canterbury.seng302.gardenersgrove.components.NavBar;
 import nz.ac.canterbury.seng302.gardenersgrove.controller.ResponseStatuses.NoSuchFriendRequestException;
 import nz.ac.canterbury.seng302.gardenersgrove.entity.FriendRequest;
 import nz.ac.canterbury.seng302.gardenersgrove.entity.User;
 import nz.ac.canterbury.seng302.gardenersgrove.service.FriendRequestService;
 import nz.ac.canterbury.seng302.gardenersgrove.service.FriendshipService;
+import nz.ac.canterbury.seng302.gardenersgrove.service.GardenService;
 import nz.ac.canterbury.seng302.gardenersgrove.service.UserService;
 import nz.ac.canterbury.seng302.gardenersgrove.utility.Status;
 import org.slf4j.Logger;
@@ -17,8 +18,6 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -28,15 +27,17 @@ import static nz.ac.canterbury.seng302.gardenersgrove.config.UriConfig.*;
  * Controls the manage friends page which displays current friends and, incoming and outgoing friend requests.
  */
 @Controller
-public class FriendsController extends GardensSidebar {
+public class FriendsController extends NavBar {
 
     Logger logger = LoggerFactory.getLogger(FriendsController.class);
     private final UserService userService;
     private final FriendRequestService friendRequestService;
 
-    private List<String> requestActions = new ArrayList<String>(Arrays.asList("Accept", "Decline", "Cancel"));
+    private final List<String> requestActions = List.of("Accept", "Decline", "Cancel");
 
     private final FriendshipService friendshipService;
+
+    private final GardenService gardenService;
 
     /**
      * Constructor for controller of manage friends page
@@ -46,10 +47,16 @@ public class FriendsController extends GardensSidebar {
      * @param friendshipService    used to adjust friendships between users
      */
     @Autowired
-    public FriendsController(UserService userService, FriendRequestService friendRequestService, FriendshipService friendshipService) {
+    public FriendsController(
+            UserService userService,
+            FriendRequestService friendRequestService,
+            FriendshipService friendshipService,
+            GardenService gardenService
+    ) {
         this.userService = userService;
         this.friendRequestService = friendRequestService;
         this.friendshipService = friendshipService;
+        this.gardenService = gardenService;
     }
 
     /**
@@ -61,6 +68,7 @@ public class FriendsController extends GardensSidebar {
     public String getFriendsPage(Model model) {
         logger.info("GET {}", viewFriendsUri());
 
+        this.updateGardensNavBar(model, gardenService, userService);
         model.addAttribute("user", userService.getAuthenticatedUser());
         model.addAttribute("viewFriendsGardensUriString", VIEW_ALL_FRIENDS_GARDENS_URI_STRING);
         model.addAttribute("manageFriendsUri", MANAGE_FRIENDS_URI_STRING);
@@ -79,7 +87,7 @@ public class FriendsController extends GardensSidebar {
      * @param action states if there hase been a request accepted, declined or cancelled or otherwise a friend removed
      * @param request is the id of the friend or request being altered
      * @return a redirect to the manage friends page
-     * @throws NoSuchFriendRequestException
+     * @throws NoSuchFriendRequestException if the request id does not exist
      */
     @PostMapping(MANAGE_FRIENDS_URI_STRING)
     public String submitFriendsPage(@RequestParam String action, @RequestParam Long request) throws NoSuchFriendRequestException {
@@ -108,6 +116,7 @@ public class FriendsController extends GardensSidebar {
                 case "Cancel":
                     logger.info("Canceled Request");
                     friendRequestService.removeRequest(friendRequest);
+                    break;
                 default:
                     logger.info("Default in switch statement");
             }
